--- a/templates/account/anasayfa.html
+++ b/templates/account/anasayfa.html
@@ -1,98 +1,53 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-    <style>
-        body {
-  font-family: "Lato", sans-serif;
-}
-
-.sidebar {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidebar a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidebar a:hover {
-  color: #f1f1f1;
-}
-
-.sidebar .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-
-.openbtn {
-  font-size: 20px;
-  cursor: pointer;
-  background-color: #111;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-}
-
-.openbtn:hover {
-  background-color: #444;
-}
-
-#main {
-  transition: margin-left .5s;
-  padding: 16px;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidebar {padding-top: 15px;}
-  .sidebar a {font-size: 18px;}
-}
-    </style>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Title</title>
 </head>
 <body>
 
-<div id="mySidebar" class="sidebar">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
-</div>
-<div id="main">
-    <nav class="navbar navbar-dark bg-dark">
-        <button class="navbar-toggler" type="button" onclick="openNav()">
-            <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <form class="form-inline my-2 my-lg-0">
-            <button type="button" class="btn btn-outline-info">Giriş Yap</button>
-            <button type="button" class="btn btn-outline-success">Kayıt Ol</button>
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-         </form>
+<div id="main">
+ <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" >Endüstriyel Simbiyoz</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'anasayfa' %}">Anasayfa <span class="sr-only">(current)</span></a>
+          </li>
+
+        </ul>
+        <form class="form-inline mt-2 mt-md-0">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active" style="margin-right: 10px">
+                    <a href="{% url 'profil' %}">
+                        <button type="button" class="btn btn-warning">ÜRETİCİ</button>
+                    </a>
+                </li>
+                <li class="nav-item active" style="margin-right: 10px">
+                    <a href="{% url 'profiltuketici' %}">
+                        <button type="button" class="btn btn-outline-warning">TÜKETİCİ</button>
+                    </a>
+                </li>
+                <li>
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </li>
+            </ul>
+
+        </form>
+      </div>
     </nav>
 </div>
-
-<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+<br>
+<br>
+HOŞGELDİNİZ, {{ request.user.id }}
+<div style="margin-top: 50px;" id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -100,21 +55,21 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="pink.png" class="d-block w-100" alt="pink" >
+      <img src="../../static/pink.png" class="d-block w-100" alt="pink" >
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="grey.png" class="d-block w-100" alt="orange">
+      <img src="../../static/orange.png" class="d-block w-100" alt="orange">
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="orange.png" class="d-block w-100" alt="grey" >
+      <img src="../../static/grey.png" class="d-block w-100" alt="grey" >
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -131,17 +86,7 @@
   </a>
 </div>
 
-<script>
-function openNav() {
-  document.getElementById("mySidebar").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
-}
 
-function closeNav() {
-  document.getElementById("mySidebar").style.width = "0";
-  document.getElementById("main").style.marginLeft= "0";
-}
-</script>
 
 
 
